feat: 5단계 하이브리드 화재 감지 시스템 완성
- CV 4단계 필터 (색상/움직임/형태/연기) + YOLOv8 AI 검증
- 스레드 MJPEG 프레임 리더 (USB/ADB 카메라)
- N프레임 간격 최적화 (실시간 15fps 달성)
- 4단계 알림 시스템 (Slack/이메일/경보음/영상)
- 3중 오탐 방지 메커니즘
- PyInstaller EXE 빌드 지원
- 한글 README 및 아키텍처/파이프라인 다이어그램

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,21 @@ Thumbs.db
 
 # Config with secrets (keep sample files)
 config/*_secret*
+
+# Temp files
+~$*
+*.tmp
+
+# Presentation build files
+create_presentation.py
+generate_images.py
+
+# Claude
+.claude/
+
+# Distribution
+dist/
+build/
+
+# Platform tools (download separately)
+platform-tools/
