--- a/config/alert_config.yaml
+++ b/config/alert_config.yaml
@@ -13,21 +13,21 @@ alert:
       enabled: true
       actions: ["log", "slack", "email", "sound", "video"]
 
-  # Slack 설정
-  slack:
-    enabled: false
-    webhook_url: "https://hooks.slack.com/services/YOUR/WEBHOOK/URL"
-    channel: "#fire-alerts"
-    mention_users: ["@safety-manager", "@facility-team"]
+  # # Slack 설정
+  # slack:
+  #   enabled: false
+  #   webhook_url: "https://hooks.slack.com/services/YOUR/WEBHOOK/URL"
+  #   channel: "#fire-alerts"
+  #   mention_users: ["@safety-manager", "@facility-team"]
 
-  # Email 설정
-  email:
-    enabled: false
-    smtp_server: "smtp.gmail.com"
-    smtp_port: 587
-    sender: "alert@company.com"
-    password: "your-app-password"
-    recipients: ["safety@company.com", "manager@company.com"]
+  # # Email 설정
+  # email:
+  #   enabled: false
+  #   smtp_server: "smtp.gmail.com"
+  #   smtp_port: 587
+  #   sender: "alert@company.com"
+  #   password: "your-app-password"
+  #   recipients: ["safety@company.com", "manager@company.com"]
 
   # 로컬 사운드
   sound:
@@ -39,5 +39,5 @@ alert:
   logging:
     save_snapshots: true
     save_videos: true
-    video_duration: 20  # 전후 20초 녹화
+    video_duration: 10  # 전후 20초 녹화
     log_directory: "logs/"
