chore: 불필요 파일 제거 (모델, 빌드 스펙)
- models/yolov8n-fire.pt (6.2MB) 제거 → README에 다운로드 안내 추가
- fire_detection.spec 제거 (로컬 경로 하드코딩)
- .gitignore에 해당 파일 패턴 추가

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ build/
 
 # Platform tools (download separately)
 platform-tools/
+
+# Models (download separately)
+models/*.pt
+
+# Build spec (local paths)
+fire_detection.spec
